2014-04-27  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Fix splicing.

2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-complex-type): Eliminate invalid
	warnings for choice types.

2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type-attributes): Also
	encode base type attributes.

2014-04-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-complex-type): Fix compilation
	warning.  Print e-name in warnings, or element if e-name is nil.

2014-04-20  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-element): Add alternatives slot.
	(soap-xs-parse-element): Set substitution-group.
	(soap-resolve-references-for-xs-element): Populate alternatives
	slot.
	(soap-get-candidate-elements): New function.
	(soap-encode-xs-complex-type): Iterate through all candidate
	elements.  Handle types with nil type indicator.  Fix warning
	logic.

2014-03-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-current-wsdl): moved declaration earlier in
	the file to prevent compiler warning.

2014-03-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-node-optional): New function.
	(soap-node-multiple): Likewise.
	(soap-xs-parse-element): Call soap-node-optional and
	soap-node-multiple.
	(soap-xs-complex-type): Add optional? and multiple? slots.
	(soap-xml-get-children-fq): New function.
	(soap-xs-element-get-fq-name): Likewise.
	(soap-xs-complex-type-optional-p): Likewise.
	(soap-xs-complex-type-multiple-p): Likewise.
	(soap-xs-attributes-consolidate): Likewise.
	(soap-decode-xs-attributes): Likewise.
	(soap-decode-xs-complex-type): Decode types with nil type
	indicator.  Support children that use local namespaces.  Decode
	attributes.  Add type considerations to optional? and multiple?
	warnings.

2014-02-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
